# test-bytecode

./: Cargo.toml  README.md  justfile  shell.nix
nsm/: Cargo.toml
nsm/src/: error.rs  lib.rs  plugins.rs  processor.rs  tape.rs  tests.rs
nsm/src/plugins/: arithmetic.rs  control.rs  logic.rs  memory.rs  stack.rs
web-service/: Cargo.toml
web-service/src/: main.rs
web-service/static/: index.html  script.js
