[package]
name = "web-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

env_logger = "0.9"
actix-web = "4.0"
actix-files = "0.6"
futures = "0.3"
nsm = { path = "../nsm", features = [ "actix-web" ] }

